tests/expectations/compiler/type_inference/loop_iterators_fail.out
Error [ETYC0372134]: mismatched types in loop iterator range bounds
    --> compiler-test:8:14
     |
   8 |     for i in 1u8..2u16 {
     |              ^^^^^^^^^
Error [ETYC0372117]: Expected type `u8` but type `u32` was found.
    --> compiler-test:9:22
     |
   9 |         for j: u8 in 0u32..1u32 {
     |                      ^^^^
Error [ETYC0372117]: Expected type `u8` but type `u32` was found.
    --> compiler-test:9:28
     |
   9 |         for j: u8 in 0u32..1u32 {
     |                            ^^^^
Error [ETYC0372117]: Expected an integer but type `field` was found.
    --> compiler-test:14:14
     |
  14 |     for i in 1field..2scalar {
     |              ^^^^^^
Error [ETYC0372117]: Expected an integer but type `scalar` was found.
    --> compiler-test:14:22
     |
  14 |     for i in 1field..2scalar {
     |                      ^^^^^^^
Error [ETYC0372134]: mismatched types in loop iterator range bounds
    --> compiler-test:14:14
     |
  14 |     for i in 1field..2scalar {
     |              ^^^^^^^^^^^^^^^
